# big_integer

./: .gitignore  CMakeLists.txt  _core_arithmetics.cpp  _core_arithmetics.hpp  big_integer.cpp  big_integer.hpp  big_integer_testing.cpp  engine  full_test.sh  main.cpp  shared_ptr.hpp  stress.sh  vector.hpp
engine/: _asm_vector.asm
tmp/: checker  exec  generator
